--- a/git.css
+++ b/git.css
@@ -2,3 +2,14 @@ body
 {
     background-color: aqua;
 }
+h1
+{
+    color:lightskyblue;
+    text-align:center;
+}
+p
+{
+    font-family: "Times New Roman";
+    font-size:20px;
+    text-align: center;
+}
